# libjitter

./: .gitmodules  AUTHORS.md  CMakeLists.txt  JitterBuffer.cpp  README.md  libjitter.cpp
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt  benchmark.cpp
include/: JitterBuffer.hh  Metrics.h  Packet.h  libjitter.h
tests/: BufferInspector.cpp  BufferInspector.hh  CMakeLists.txt  api_test.cpp  implementation_test.cpp  test.cpp  test_functions.h
